[package]
name = "bladerf-bindings"
version = "0.0.12"
repository = "https://github.com/unimonkiez/rust-bladerf-bindings"
authors = ["Yuval Saraf <unimonkiez@gmail.com>"]
description = "Rust bindings for bladeRF"
readme = "README.md"
license = "MIT"
default-run = "main"
edition = "2021"

[lib]
name = "bladerf"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[example]]
name = "codegen"
path = "codegen.rs"

[dev-dependencies]
bindgen = "0.65.1"
cargo_metadata = "0.12.3"

[dependencies]
libc = "0.2.149"
